apps/nextcloud/db-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nextcloud-db
spec:
  replicas: 1  
  selector:
    matchLabels:
      app: nextcloud-db
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app: nextcloud-db
    spec:
      containers:
        - image: mariadb:10
          imagePullPolicy: Always
          name: nextcloud-db
          resources:
            requests:
              cpu: "100m"
              memory: "200Mi"
          volumeMounts:
            - name: nextcloud-db-storage
              mountPath: /var/lib/mysql
      volumes:
        - name: nextcloud-db-storage
          hostPath:
            path: /home/hubbe/services/nextcloud-db
