apps/nextcloud/db-statefulset.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: nextcloud-db
spec:
  replicas: 1  
  selector:
    matchLabels:
      app: nextcloud-db
  serviceName: nextcloud-db
  template:
    metadata:
      labels:
        app: nextcloud-db
    spec:
      securityContext:
        runAsUser: 1000
        runAsGroup: 1000
        fsGroup: 1000
      containers:
        - image: mariadb:10
          imagePullPolicy: Always
          name: nextcloud-db
          resources:
            requests:
              cpu: "100m"
              memory: "200Mi"
          volumeMounts:
            - name: data
              mountPath: /var/lib/mysql
  volumeClaimTemplates:
    - metadata:
        name: data
      spec:
        accessModes: [ "ReadWriteOnce" ]
        storageClassName: longhorn
        resources:
          requests:
            storage: 1Gi
