apps/nextcloud/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nextcloud-collabora
spec:
  selector:
    matchLabels:
      app: nextcloud
      component: collabora
  template:
    metadata:
      labels:
        app: nextcloud
        component: collabora
    spec:
      containers:
        - image: docker.io/collabora/code:26.04.4.2.1
          name: collabora
          ports:
            - containerPort: 9980
              name: http
          readinessProbe:
            httpGet:
              path: /
              port: 9980
            initialDelaySeconds: 5
            periodSeconds: 15
            timeoutSeconds: 5
          resources:
            requests:
              cpu: 250m
              memory: 1Gi
            limits:
              cpu: 1000m
              memory: 2Gi
          securityContext:
            capabilities:
              add:
                - CAP_SYS_CHROOT
          volumeMounts:
            - name: tmp
              mountPath: /tmp
      volumes:
        - name: tmp
          emptyDir: {}
