apps/nextcloud/deployments.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nextcloud-redis
spec:
  replicas: 1
  selector:
    matchLabels:
      app: nextcloud-redis
  strategy:
    type: RollingUpdate
  template:
    metadata:
      labels:
        app: nextcloud-redis
    spec:
      containers:
        - image: docker.io/library/redis:latest
          name: nextcloud-redis
          livenessProbe:
            exec:
              command:
                - "redis-cli"
                - "--pass"
                - $(REDIS_HOST_PASSWORD)
                - "ping"
            initialDelaySeconds: 5
            periodSeconds: 15
          command: ["redis-server"]
          args:
            - "--requirepass"
            - "$(REDIS_HOST_PASSWORD)"
          resources:
            requests:
              cpu: "50m"
              memory: "50Mi"
            limits:
              cpu: "150m"
              memory: "150Mi"
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nextcloud-onlyoffice
spec:
  replicas: 1
  selector:
    matchLabels:
      app: nextcloud-onlyoffice
  strategy:
    type: RollingUpdate
  template:
    metadata:
      labels:
        app: nextcloud-onlyoffice
      annotations:
        diun.watch_repo: "true"
    spec:
      containers:
        - image: onlyoffice/documentserver:6.1.1
          name: nextcloud-onlyoffice
          readinessProbe:
            httpGet:
              path: /healthcheck
              port: 80
            initialDelaySeconds: 30
            periodSeconds: 15
            timeoutSeconds: 5
          resources:
            requests:
              cpu: "250m"
              memory: "1Gi"
            limits:
              cpu: "500m"
              memory: "2Gi"
