apps/nextcloud/statefulset.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: nextcloud-web
spec:
  selector:
    matchLabels:
      app: nextcloud
      component: nextcloud
  serviceName: nextcloud-web
  template:
    metadata:
      labels:
        app: nextcloud
        component: nextcloud
    spec:
      containers:
        - image: ghcr.io/linuxserver/nextcloud:35.0.1
          imagePullPolicy: Always
          name: nextcloud
          ports:
            - containerPort: 443
              name: https
          readinessProbe:
            httpGet:
              httpHeaders:
                - name: Host
                  value: cloud.hubbe.club
              path: /login
              port: 443
              scheme: HTTPS
            initialDelaySeconds: 5
            periodSeconds: 15
            timeoutSeconds: 5
          resources:
            requests:
              cpu: 500m
              memory: 1Gi
            limits:
              cpu: 2000m
              memory: 6Gi
          securityContext:
            allowPrivilegeEscalation: false
          volumeMounts:
            - name: config
              mountPath: /config
            - name: data
              mountPath: /data
            - name: backups-ha
              mountPath: /backups/home-assistant
      volumes:
        - name: backups-ha
          persistentVolumeClaim:
            claimName: nfs-backups-homeassistant
  volumeClaimTemplates:
    - metadata:
        name: config
      spec:
        accessModes: [ "ReadWriteOnce" ]
        resources:
          requests:
            storage: 5Gi
        storageClassName: longhorn
    - metadata:
        name: data
      spec:
        accessModes: [ "ReadWriteOnce" ]
        resources:
          requests:
            storage: 10Gi
        storageClassName: longhorn
