apps/nextcloud/statefulsets.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: nextcloud-db
spec:
  selector:
    matchLabels:
      app: nextcloud
      component: mariadb
  serviceName: nextcloud-db
  template:
    metadata:
      labels:
        app: nextcloud
        component: mariadb
    spec:
      containers:
        - image: docker.io/library/mariadb:10.11.4
          name: mariadb
          args:
            - "--skip-innodb-read-only-compressed"
          #env:
          #  - name: MARIADB_AUTO_UPGRADE
          #    value: "true"  # TODO: figure out why this crashes with "can't connect to server on nextcloud-db"
          ports:
            - containerPort: 3306
              name: mariadb
          readinessProbe:
            exec:
              command:
                - bash
                - "-c"
                - "mysql --host=localhost --user=${MYSQL_USER} --password=${MYSQL_PASSWORD} --execute 'SELECT 1'"
            initialDelaySeconds: 5
            periodSeconds: 15
          resources:
            requests:
              cpu: 50m
              memory: 1Gi
            limits:
              cpu: 500m
              memory: 3Gi
          securityContext:
            allowPrivilegeEscalation: false
          volumeMounts:
            - name: configs
              mountPath: /etc/mysql/mariadb.conf.d/99-nextcloud.cnf
              subPath: 99-nextcloud.cnf
            - name: data
              mountPath: /var/lib/mysql
      volumes:
        - name: configs
          configMap:
            name: nextcloud-db-config
  volumeClaimTemplates:
    - metadata:
        name: data
      spec:
        accessModes: [ "ReadWriteOnce" ]
        resources:
          requests:
            storage: 2Gi
        storageClassName: longhorn
---
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: nextcloud-web
spec:
  selector:
    matchLabels:
      app: nextcloud
      component: nextcloud
  serviceName: nextcloud-web
  template:
    metadata:
      labels:
        app: nextcloud
        component: nextcloud
    spec:
      containers:
        - image: ghcr.io/linuxserver/nextcloud:version-27.0.0
          imagePullPolicy: Always
          name: nextcloud
          ports:
            - containerPort: 443
              name: https
          readinessProbe:
            httpGet:
              httpHeaders:
                - name: Host
                  value: cloud.hubbe.club
              path: /login
              port: 443
              scheme: HTTPS
            initialDelaySeconds: 5
            periodSeconds: 15
            timeoutSeconds: 5
          resources:
            requests:
              cpu: 500m
              memory: 1Gi
            limits:
              cpu: 2000m
              memory: 6Gi
          securityContext:
            allowPrivilegeEscalation: false
          volumeMounts:
            - name: config
              mountPath: /config
            - name: data
              mountPath: /data
            - name: photos
              mountPath: /photos
            - name: array
              mountPath: /array
      volumes:
        - name: array
          persistentVolumeClaim:
            claimName: nfs-array
        - name: photos
          persistentVolumeClaim:
            claimName: nfs-photos
  volumeClaimTemplates:
    - metadata:
        name: config
      spec:
        accessModes: [ "ReadWriteOnce" ]
        resources:
          requests:
            storage: 5Gi
        storageClassName: longhorn
    - metadata:
        name: data
      spec:
        accessModes: [ "ReadWriteOnce" ]
        resources:
          requests:
            storage: 10Gi
        storageClassName: longhorn
