apps/nextcloud/web-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nextcloud-web
spec:
  replicas: 1
  selector:
    matchLabels:
      app: nextcloud-web
  strategy:
    type: RollingUpdate
  template:
    metadata:
      labels:
        app: nextcloud-web
    spec:
      containers:
        - image: nextcloud:18.0.4
          name: nextcloud
          resources:
            requests:
              cpu: "100m"
              memory: "500Mi"
          volumeMounts:
            - name: nextcloud-config
              mountPath: /var/www/html
            - name: nextcloud-data
              mountPath: /data
            - name: nextcloud-array
              mountPath: /array
      volumes:
        - name: nextcloud-config
          persistentVolumeClaim:
            claimName: nextcloud-config-hostpath
        - name: nextcloud-data
          persistentVolumeClaim:
            claimName: nextcloud-data-hostpath
        - name: nextcloud-array
          persistentVolumeClaim:
            claimName: array
