apps/nextcloud/web-statefulset.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: nextcloud-web
  annotations:
    stash.appscode.com/backup-blueprint: app-backup
    stash.appscode.com/target-paths: "/var/www/html,/data"
    stash.appscode.com/volume-mounts: "config:/var/www/html,data:/data"
spec:
  replicas: 1
  selector:
    matchLabels:
      app: nextcloud-web
  serviceName: nextcloud-web
  template:
    metadata:
      labels:
        app: nextcloud-web
    spec:
      securityContext:
        fsGroup: 1000
      containers:
        - image: nextcloud:18.0.4
          name: nextcloud
          resources:
            requests:
              cpu: "100m"
              memory: "500Mi"
          volumeMounts:
            - name: config
              mountPath: /var/www/html
            - name: data
              mountPath: /data
            - name: array
              mountPath: /array
      volumes:
        - name: array
          persistentVolumeClaim:
            claimName: array
  volumeClaimTemplates:
    - metadata:
        name: config
      spec:
        accessModes: [ "ReadWriteOnce" ]
        storageClassName: longhorn
        resources:
          requests:
            storage: 5Gi
    - metadata:
        name: data
      spec:
        accessModes: [ "ReadWriteOnce" ]
        storageClassName: longhorn
        resources:
          requests:
            storage: 10Gi
