apps/nextcloud/db-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: nextcloud-db
spec:
  ports:
    - port: 3306
  selector:
    app: nextcloud-db
