apps/nextcloud/redis-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: nextcloud-redis
spec:
  ports:
    - port: 6379
  selector:
    app: nextcloud-redis
