apps/nextcloud/services.yaml
apiVersion: v1
kind: Service
metadata:
  name: nextcloud-collabora
spec:
  ports:
    - port: 9980
  selector:
    app: nextcloud
    component: collabora
---
apiVersion: v1
kind: Service
metadata:
  name: nextcloud-web
spec:
  ports:
    - port: 443
  selector:
    app: nextcloud
    component: nextcloud
