apps/nextcloud/web-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: nextcloud-web
spec:
  ports:
    - port: 80
  selector:
    app: nextcloud-web
