apps/nextcloud/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: nextcloud
  annotations:
    # disable client_max_body_size checking
    nginx.ingress.kubernetes.io/proxy-body-size: "0"
    # upstream https
    nginx.ingress.kubernetes.io/backend-protocol: "HTTPS"
    # .well-known URLs for carddav and caldav
    #nginx.ingress.kubernetes.io/server-snippet: |
    #  location /.well-known/carddav {
    #    return 301 $scheme://$host:$server_port/remote.php/dav;
    #  }
    #  location /.well-known/caldav {
    #    return 301 $scheme://$host:$server_port/remote.php/dav;
    #  }
spec:
  ingressClassName: nginx
  tls:
    - hosts:
      - cloud.hubbe.club
  rules:
    - host: cloud.hubbe.club
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: nextcloud-web
                port:
                  number: 443
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: onlyoffice
  annotations:
    nginx.ingress.kubernetes.io/configuration-snippet: |
      more_clear_headers "X-Frame-Options";
      more_set_headers "Content-Security-Policy: frame-ancestors https://cloud.hubbe.club";
spec:
  ingressClassName: nginx
  tls:
    - hosts:
      - documents.hubbe.club
  rules:
    - host: documents.hubbe.club
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: nextcloud-onlyoffice
                port:
                  number: 80
